Bug 211512: worked around the Mac OS X Panther bug that the IPV6_V6ONLY socket option is turned on by default.  r=bryner.